--- a/index.html
+++ b/index.html
@@ -45,97 +45,97 @@ table td {/*table内のtdに対して*/
  <tr>
   <td>ヒルサイドクリニック神宮前　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【ヒルサイドクリニック神宮前 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【ヒルサイドクリニック神宮前 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【ヒルサイドクリニック神宮前 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
  <tr>
   <td>神保整形外科　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【神保整形外科 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【神保整形外科 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【神保整形外科 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
  <tr>
   <td>医療法人社団　藤啓会　北町診療所　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【北町診療所 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【北町診療所 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【北町診療所 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
  <tr>
   <td>医療法人社団　カトレア会　Ｄｒ．マノメディカルクリニック　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【Dr.マノメディカルクリニック 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【Dr.マノメディカルクリニック 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【Dr.マノメディカルクリニック 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
   <tr>
   <td>小堀セントラル臨床研究審査委員会</td><td>東京都</td>
   <td><a href="手順書/【小堀セントラル臨床研究審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【小堀セントラル臨床研究審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【小堀セントラル臨床研究審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
   <tr>
   <td>医療法人社団　鵲志会　中目黒アトラスクリニック　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【中目黒アトラスクリニック 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【中目黒アトラスクリニック 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【中目黒アトラスクリニック 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
   <tr>
   <td>ＫＫＲ治験ネットワーク中央治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【ＫＫＲ治験ネットワーク中央治験審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/ＫＫＲ治験ネットワーク中央治験審査委員会委員名簿(170711).pdf">閲覧</a></td>
+  <td><a href="委員名簿/ＫＫＲ治験ネットワーク中央治験審査委員会委員名簿(170711).pdf">閲覧</a></td>
  </tr>
   <tr>
   <td>医療法人社団鵲志会　中目黒アトラスクリニック第２治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【中目黒アトラスクリニック 第2治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【中目黒アトラスクリニック 第2治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【中目黒アトラスクリニック 第2治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
   <tr>
   <td>医療法人社団久福会　関野病院　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【医療法人社団久福会関野病院治験審査委員会】手順書 第10版(20.4.23改訂)表紙～本文.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【最新】医療法人社団久福会 関野病院 治験審査委員会 委員名簿   (22.4.11).pdf">閲覧</a></td>
+  <td><a href="委員名簿/【最新】医療法人社団久福会 関野病院 治験審査委員会 委員名簿   (22.4.11).pdf">閲覧</a></td>
  </tr>
   <tr>
   <td>医療法人社団　和久慈会　鳥海ペインクリニック　治験審査委員会</td><td>東京都</td>
   <td><a href="手順書/【鳥海ペインクリニック 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【鳥海ペインクリニック 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【鳥海ペインクリニック 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr>
   <tr>
   <td>地方独立行政法人りんくう総合医療センター治験審査委員会</td><td>大阪府</td>
   <td><a href="手順書/【地方独立行政法人りんくう総合医療センター治験審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/地方独立行政法人りんくう総合医療センター治験審査委員会.pdf">閲覧</a></td>
+  <td><a href="委員名簿/地方独立行政法人りんくう総合医療センター治験審査委員会.pdf">閲覧</a></td>
  </tr> 
   <tr>
   <td>社会福祉法人恩賜財団済生会　千葉県済生会習志野病院　治験審査委員会</td><td>千葉県</td>
   <td><a href="手順書/【千葉県済生会習志野病院】SOP第7版関連書類.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/千葉県済生会習志野病院IRB委員指名書20150401.pdf">閲覧</a></td>
+  <td><a href="委員名簿/千葉県済生会習志野病院IRB委員指名書20150401.pdf">閲覧</a></td>
  </tr> 
  <tr>
   <td>五所塚診療所治験審査委員会</td><td>神奈川県</td>
   <td><a href="手順書/【五所塚診療所 治験審査委員会】手順書・参考書式.zip">閲覧</a></td>
-  <td><a href="委員名簿閲覧/【五所塚診療所 治験審査委員会】委員名簿.zip">閲覧</a></td>
+  <td><a href="委員名簿/【五所塚診療所 治験審査委員会】委員名簿.zip">閲覧</a></td>
  </tr> 
   <tr>
   <td>新潟県立がんセンター新潟病院治験審査委員会</td><td>新潟県</td>
   <td><a href="手順書/【新潟県立がんセンター新潟病院治験審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/新潟県立がんセンター新潟病院治験審査委員会.doc">閲覧</a></td>
+  <td><a href="委員名簿/新潟県立がんセンター新潟病院治験審査委員会.doc">閲覧</a></td>
  </tr> 
   <tr>
   <td>鹿児島市医師会病院　治験審査委員会</td><td>鹿児島県</td>
   <td><a href="手順書/【鹿児島市医師会病院　治験審査委員会】手順書.zip">閲覧</a>
-  </td><td><a href="委員名簿閲覧/鹿児島市医師会病院治験審査委員会委員指名書兼名簿　20220701.pdf">閲覧</a></td>
+  </td><td><a href="委員名簿/鹿児島市医師会病院治験審査委員会委員指名書兼名簿　20220701.pdf">閲覧</a></td>
  </tr> 
   <tr>
   <td>独立行政法人国立病院機構三重中央医療センター治験審査委員会</td><td>三重県</td>
   <td><a href="手順書/【独立行政法人国立病院機構三重中央医療センター治験審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/独立行政法人国立病院機構三重中央医療センター治験審査委員会.pdf">閲覧</a></td>
+  <td><a href="委員名簿/独立行政法人国立病院機構三重中央医療センター治験審査委員会.pdf">閲覧</a></td>
  </tr> 
   <tr>
   <td>埼玉県厚生農業協同組合連合会　熊谷総合病院　治験審査委員会</td><td>埼玉県</td>
   <td><a href="手順書/【熊谷総合病院治験審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/熊谷総合病院治験審査委員名簿14.4.1.pdf">閲覧</a></td>
+  <td><a href="委員名簿/熊谷総合病院治験審査委員名簿14.4.1.pdf">閲覧</a></td>
  </tr> 
   <tr>
   <td>独立行政法人国立病院機構　高崎総合医療センター　受託研究審査委員会</td><td>群馬県</td>
   <td><a href="手順書/【高崎総合医療センター受託研究審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/独立行政法人国立病院機構　高崎総合医療センター　受託研究審査委員会.pdf">閲覧</a></td>
+  <td><a href="委員名簿/独立行政法人国立病院機構　高崎総合医療センター　受託研究審査委員会.pdf">閲覧</a></td>
  </tr> 
   <tr>
   <td>名古屋第二赤十字病院治験・臨床研究審査委員会</td><td>愛知県</td>
   <td><a href="手順書/【名古屋第二赤十字病院治験・臨床研究審査委員会】手順書.pdf">閲覧</a></td>
-  <td><a href="委員名簿閲覧/名古屋第二赤十字病院治験・臨床研究審査委員会.pdf">閲覧</a></td>
+  <td><a href="委員名簿/名古屋第二赤十字病院治験・臨床研究審査委員会.pdf">閲覧</a></td>
  </tr> 
  </table>
 </body>
